--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -73,6 +73,7 @@
             android:paddingLeft="40dp"
             android:paddingRight="40dp"
             android:text="Sign in !"
+            android:visibility="gone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/white"
